# starview-agent

./: .gitignore  .mcp.json  CLAUDE.local.md.example  CLAUDE.md  README.md  settings.json
backend/: ARCHITECTURE.md
backend/docs/: CELERY_GUIDE.md  DOCUMENTATION_STYLE.md  EMAIL_SECURITY_SUMMARY.md  LOGGING_GUIDE.md  RENDER_CRON_SETUP.md  STORAGE_CONFIGURATION.md
backend/tests/: README.md  badge_performance_test.py  check_social_accounts.py  complete_email_change.py  contenttype_cache_comparison.py  contenttype_cache_test.py  contenttype_functional_test.py  medium_issue5_after.py  medium_issue5_before.py  medium_issue6_after.py  medium_issue6_before.py  medium_issue7_after.py  medium_issue7_before.py  n1_query_test.py  print_statement_audit.txt  (+10 more)
commands/: create-badge.md  update-docs.md
frontend/: ARCHITECTURE.md  STYLE_GUIDE.md
hooks/: doc-reminder.sh  pre-commit-check.sh  session-start-reminder.sh  subagent-monitor.sh  track-changes.sh  track-deletions.sh
rules/: backend.md  frontend.md  git-conventions.md  security.md  seo.md  testing.md
skills/seed-observatories/: .gitignore  METRICS_TEMPLATES.md  README.md  SKILL.md  TROUBLESHOOTING.md  normalize_checkpoint.py  pyproject.toml
skills/seed-observatories/observatory_seeder/: __init__.py  config.py  discover.py  download.py  normalize_checkpoint.py  run.py  url_validator.py  validate.py
skills/seed-observatories/references/: DESCRIPTION_GENERATION.md
ux-research/: gemini-output-competitors-2025-11-28.md  gemini-output-pain-points-2025-11-28.md  gemini-output-positioning-2025-11-28.md  gemini-prompts.txt
(+76 files in other folders)
